--- a/checkpoint-frontend/index.html
+++ b/checkpoint-frontend/index.html
@@ -61,7 +61,14 @@
                 </p>
             </div>
         </secttion>
-        
+        <section class="section-video">
+           <h2 class="h2-video">Video</h2>
+            <video class="video" controls id="Videos">
+                <source src="/midia/videoplayback.mp4" type="video/mp4">
+                Desculpe seu Navegador nao Suporta Videos!
+            </video>
+        </section>
+
 
 
     </main>
