--- a/checkpoint-frontend/index.html
+++ b/checkpoint-frontend/index.html
@@ -64,7 +64,7 @@
         <section class="section-video">
            <h2 class="h2-video">Video</h2>
             <video class="video" controls id="Videos">
-                <source src="/midia/videoplayback.mp4" type="video/mp4">
+                <source src="./midia/videoplayback.mp4" type="video/mp4">
                 Desculpe seu Navegador nao Suporta Videos!
             </video>
         </section>
