--- a/index.html
+++ b/index.html
@@ -35,23 +35,25 @@
                 <p class="descrição"> A Praia da Concha é a principal praia urbana de Itacaré, repleta de bares e
                     barracas à beira-mar. Por ser uma praia localizada próxima ao centro de Itacaré, é um destino certo
                     de muitos turistas que querem curtir o mar sem se preocupar com carro ou deslocamento, tornando-a
-                    uma praia bastante movimentada durante o verão.
-                    Formada pelo encontro do mar com o Rio de Contas, a Praia da Concha oferece um mar com águas calmas,
-                    beneficiando a prática de esportes, como Stand Up e Canoagem, que ficam disponíveis para serem
-                    alugados no local.
-                </p>
+                    uma praia bastante movimentada durante o verão. </p>
+                <form>
+                    <button class="botão" type="submit">Ver mais </button>
+                </form>
 
 
             </div>
-            <div class="card">
+            <div class="card2">
                 <h3 class="titulo">Rua da Pituba</h3>
                 <img class="ruadapituba" src="./img/rua-da-pituba.jpg" alt="Rua da Pituba">
                 <p class="descrição"> Essa é a rua onde tudo acontece em Itacaré. Bares, restaurantes, cafés, lojinhas,
                     artesanato, artistas de rua, música ao vivo… Algo que não falta na programação de quem quer saber o
                     que fazer em Itacaré, principalmente à noite! </p>
+                <form>
+                    <button class="botão" type="submit">Ver mais </button>
+                </form>
 
             </div>
-            <div class="card">
+            <div class="card3">
                 <h3 class="titulo"> Cachoeiras </h3>
                 <img class="cachoeiras" src="./img/Cachoeiras.jpg" alt="Cachoeiras">
                 <p class="descrição"> Itacaré também é cercada por cachoeiras. Uma das mais famosas é a de Tijuípe, a
@@ -59,10 +61,13 @@
                     (preço de 2017) e além do poço ótimo para banho, há uma boa estrutura com restaurante e banheiros.
                     Ela também costuma entrar no roteiro do “tour das quatro praias” oferecido nas agências.
                 </p>
+                <form>
+                    <button class="botão" type="submit">Ver mais </button>
+                </form>
             </div>
         </secttion>
         <section class="section-video">
-           <h2 class="h2-video">Video</h2>
+            <h2 class="h2-video">Video</h2>
             <video class="video" controls id="Videos">
                 <source src="./midia/videoplayback.mp4" type="video/mp4">
                 Desculpe seu Navegador nao Suporta Videos!
